--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
   <head>
-    <!--ŽQlF https://qiita.com/mkoku/items/c635566e829c303a7d3f-->
-    <script src="https://aframe.io/releases/1.0.1/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-box position="0 1 0" rotation="20 40 0" color="#4CC3D9"></a-box>
-      <a-sky color="#DDDDDD"></a-sky>
-      <a-camera position="0 1 4" cursor-visible="true" cursor-scale="2" cursor-color="#0095DD" cursor-opacity="0.5"><a-camera>
-      <a-light type="directional" color="#FFFFFF" intensity="0.5" position="-1 1 2"></a-light>
-    </a-scene>
+    <a href="ar\sample">AR sample</a>
+    <a href="vr\sample">VR sample</a>
   </body>
 </html>
