--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WS2QX276N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3WS2QX276N');
+    </script>
+    <script>console.log("welcome");</script>
   </head>
   <body>
     <a href="ar\sample">AR sample</a>
