--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WS2QX276N"></script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
