--- a/ar/test/index.html
+++ b/ar/test/index.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <!--https://lesson-ar-js.glitch.me/-->
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-      <a-marker preset="hiro">
-        <a-entity
-          scale="0.03 0.03 0.03"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-          position="0 0 1"
-          rotation="-90 0 0"
-        ></a-entity>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
-</html>
+ <!--https://lesson-ar-js.glitch.me/-->
+ <!DOCTYPE html>
+ <html>
+   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+   <body style="margin : 0px; overflow: hidden;">
+     <a-scene embedded arjs>
+       <a-marker preset="custom" type="pattern" url="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fpattern-01-qr.patt?v=1618674990475">
+         <a-image
+           src="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fcute_maid.png?v=1618746418138"
+           position="0 0 0.3"
+           rotation="-90 0 0"
+           scale="1.5 1.5 1"
+         >
+         </a-image>
+       </a-marker>
+       <a-entity camera></a-entity>
+     </a-scene>
+   </body>
+ </html>
