--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <a href="ar\sample">AR sample</a>
+    <a href="ar\test">01-ar-恐竜</a>
     <a href="vr\sample">VR sample</a>
     <a href="webxr-samples">WebXR samples</a>
   </body>
