自作マーカー

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script>console.log("welcome");</script>
   </head>
   <body>
-    <a href="ar\sample">AR sample</a>
-    <a href="ar\test">01-ar-恐竜</a>
-    <a href="vr\sample">VR sample</a>
-    <a href="webxr-samples">WebXR samples</a>
+    <a href="ar\sample">AR sample</a><br>
+    <a href="ar\test">01-ar-恐竜</a><br>
+    <a href="vr\sample">VR sample</a><br>
+    <a href="webxr-samples">WebXR samples</a><br>
   </body>
 </html>
