自分のマーカーを追加

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <a href="ar\sample">AR sample</a><br>
     <a href="ar\test">01-ar-恐竜</a><br>
+    <a href="ar\myimg">02-ar-自分のマーカー</a><br>
     <a href="vr\sample">VR sample</a><br>
     <a href="webxr-samples">WebXR samples</a><br>
   </body>
