--- a/ar/myimg/index.html
+++ b/ar/myimg/index.html
@@ -11,7 +11,7 @@
       <a-marker preset="custom" type="pattern" url="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fpattern-01-qr.patt?v=1618674990475">
         <a-entity
           scale="0.5 0.5 0.5"
-          gltf-model="ar\myimg\free.gif"
+          gltf-model="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fflash-cube.gltf?v=1618678241580"
           position="0 0 1"
           rotation="-90 0 0"
         ></a-entity>
