--- a/ar/myimg/index.html
+++ b/ar/myimg/index.html
@@ -8,7 +8,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <a-marker preset="custom" type="pattern" url="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fpattern-01-qr.patt?v=1618674990475">
+      <a-marker preset="custom" type="pattern" url="ar\myimg\pattern-マーカー.patt">
         <a-entity
           scale="0.5 0.5 0.5"
           gltf-model="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fflash-cube.gltf?v=1618678241580"
