--- a/ar/myimg/index.html
+++ b/ar/myimg/index.html
@@ -8,14 +8,14 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <a-marker preset="custom" type="pattern" url="ar\myimg\pattern-マーカー.patt">
+      <a-marker preset="custom" type="pattern" url="pattern-マーカー.patt">
         <!-- <a-entity
           scale="0.5 0.5 0.5"
           gltf-model="https://cdn.glitch.com/dfc871f2-44bd-4c8a-bb58-5515b3ac1df9%2Fflash-cube.gltf?v=1618678241580"
           position="0 0 1"
           rotation="-90 0 0"
         ></a-entity> -->
-        <a-image src="ar\myimg\pattern-マーカー.png" position="0 0 1" rotation="-1 0 0" scale="1.5 1.5 1"></a-image>
+        <a-image src="pattern-マーカー.png" position="0 0 1" rotation="-1 0 0" scale="1.5 1.5 1"></a-image>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
