--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <script>console.log("welcome");</script>
   </head>
   <body>
-    <a href="ar\sample">AR sample</a><br>
+    <a href="ar\sample">00-ar-sample</a><br>
     <a href="ar\test">01-ar-恐竜</a><br>
     <a href="ar\myimg">02-ar-自分のマーカー</a><br>
-    <a href="ar\nomark">03-マーカーなし</a><br>
+    <a href="ar\nomark">03-ar-マーカーなし</a><br>
+    <a href="ar\log">04-ar-カメラの座標取得</a><br>
     <br><br>
-    <a href="vr\sample">VR sample</a><br>
+    <a href="vr\sample">10-vr-sample</a><br>
+    <br><br>
     <a href="webxr-samples">WebXR samples</a><br>
   </body>
 </html>
