--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="ar\myimg">02-ar-自分のマーカー</a><br>
     <a href="ar\nomark">03-ar-マーカーなし</a><br>
     <a href="ar\log">04-ar-カメラの座標取得</a><br>
+    <a href="ar\kabe">05-ar-枠</a><br>
     <br><br>
     <a href="vr\sample">10-vr-sample</a><br>
     <br><br>
