--- a/ar/kabe/index.html
+++ b/ar/kabe/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js">
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js">
     <title>Sample Web App</title>
 
     <script>
@@ -37,7 +37,7 @@
         <a-box position="0 -7 -25" color="#deb887" scale="14 1 1"></a-box>
 
       <!--中心点-->  <!--カメラに追従させない-->
-      <a-box position="0 0 -18" color="#dc143c" scale="0.5 0.5 0.5"></a-box>
+      <!--<a-box position="0 0 -18" color="#dc143c" scale="0.5 0.5 0.5"></a-box>-->
 
       <!--カメラ-->
       <a-camera position="0 0 0" cursor-visible="true" cursor-scale="2" cursor-color="#0095DD" cursor-opacity="0.5" test-camera></a-camera>
@@ -45,5 +45,14 @@
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
     </a-scene>
+    <!--中央点-->
+      <div id="center_point" style="margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        color: #ff0000;
+        font-size: 50px;
+        transform: translate(-50%, -50%) ">●</div>
   </body>
 </html>
