--- a/ar/kabe/index.html
+++ b/ar/kabe/index.html
@@ -72,15 +72,15 @@
   </head>
   <body>
     <a-scene>
-      <!--枠--> <!--カメラに追従させる-->
+      <!--枠1--> <!--カメラに追従させる-->
         <!--右-->
-        <a-box position="7 0 -25" color="#deb887" scale="1 14 1"></a-box>
+        <a-box position="10.75 0 -25" color="#deb887" scale="7.5 29 1"></a-box>
         <!--左-->
-        <a-box position="-7 0 -25" color="#deb887" scale="1 14 1"></a-box>
+        <a-box position="-10.75 0 -25" color="#deb887" scale="7.5 29 1"></a-box>
         <!--上-->
-        <a-box position="0 7 -25" color="#deb887" scale="14 1 1"></a-box>
+        <a-box position="0 10.75 -25" color="#deb887" scale="14 7.5 1"></a-box>
         <!--下-->
-        <a-box position="0 -7 -25" color="#deb887" scale="14 1 1"></a-box>
+        <a-box position="0 -10.75 -25" color="#deb887" scale="14 7.5 1"></a-box>
 
       <!--中心点-->  <!--カメラに追従させない-->
       <!--<a-box position="0 0 -18" color="#dc143c" scale="0.5 0.5 0.5"></a-box>-->
