下にも枠を追加したバージョン

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="ar\nomark">03-ar-マーカーなし</a><br>
     <a href="ar\log">04-ar-カメラの座標取得</a><br>
     <a href="ar\kabe">05-ar-枠</a><br>
+    <a href="ar\kabe2">05-ar-枠2</a><br>
     <br><br>
     <a href="vr\sample">10-vr-sample</a><br>
     <br><br>
