--- a/ar/kabe2/index.html
+++ b/ar/kabe2/index.html
@@ -95,7 +95,7 @@
               }
 
               //クリックイベント-クリックすると枠の色を変える
-              this.el.addEventListener('click', function(evt){
+              this.el.addEventListener('mouseup', function(evt){
                 i = (i + 1) % COLORS.length;
                 
                 right1.setAttribute('color', COLORS[i]);
@@ -163,10 +163,11 @@
 
       <!--カメラ-->
       <a-camera position="0 0 0" cursor-visible="true" cursor-scale="2" cursor-color="#0095DD" cursor-opacity="0.5" test-camera>
-        <a-cursor id="crawling-cursor" 
+        <!-- <a-cursor id="crawling-cursor" 
         class="ignore-ray" 
         look-at="0 0 0" 
-        material="color:red; opacity: 0.7"></a-cursor><!--中央カーソル-->
+        material="color:red; opacity: 0.7"></a-cursor> -->
+        <a-entity cursor="rayOrigin: mouse"></a-entity>
       </a-camera>
       <!-- <a-box position="5 0 -7" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
@@ -179,14 +180,14 @@
     
 
     <!--中央点-->
-    <!--<div id="center_point" style="margin: 0;
+    <div id="center_point" style="margin: 0;
       position: absolute;
       top: 50%;
       left: 50%;
       margin-right: -50%;
       color: #ff0000;
       font-size: 50px;
-      transform: translate(-50%, -50%) ">●</div>-->
+      transform: translate(-50%, -50%) ">●</div>
     <div id="colorName" style="margin: 0;
       position: absolute;
       top: 10%;
