--- a/ar/kabe2/index.html
+++ b/ar/kabe2/index.html
@@ -167,7 +167,7 @@
         class="ignore-ray" 
         look-at="0 0 0" 
         material="color:red; opacity: 0.7"></a-cursor> -->
-        <a-entity cursor="rayOrigin: mouse"></a-entity>
+        <a-entity cursor="rayOrigin: mouse" style="cursor: pointer;"></a-entity>
       </a-camera>
       <!-- <a-box position="5 0 -7" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
