--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <a href="webxr-samples">WebXR samples</a><br>
     <br><br>
     <a href="develop">develop</a><br>
+    <a href="ar\log2">デバイスの傾き</a><br>
   </body>
 </html>
