RisoTyping first commit

--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WS2QX276N"></script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'G-3WS2QX276N');
     </script>
     <script>console.log("welcome");</script>
   </head>
   <body>
+    <a href="RisoTyping_Ver.0.1/index.html">RisoTyping</a><br>
+
     <a href="develop\v3">v3</a><br>
     <a href="develop\v4_1">v4-1</a><br>
     <a href="develop\v4_2">v4-2</a><br>
