非圧縮でビルドしなおした

--- a/RisoTyping_Ver.0.1/index.html
+++ b/RisoTyping_Ver.0.1/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/RisoTyping_Ver.0.1.loader.js";
+      var loaderUrl = buildUrl + "/RisoTyping_ver.0.1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/RisoTyping_Ver.0.1.data.br",
-        frameworkUrl: buildUrl + "/RisoTyping_Ver.0.1.framework.js.br",
-        codeUrl: buildUrl + "/RisoTyping_Ver.0.1.wasm.br",
+        dataUrl: buildUrl + "/RisoTyping_ver.0.1.data",
+        frameworkUrl: buildUrl + "/RisoTyping_ver.0.1.framework.js",
+        codeUrl: buildUrl + "/RisoTyping_ver.0.1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RisoTyping",
