--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script>console.log("welcome");</script>
   </head>
   <body>
+    <a href="RisoTyping_Ver.0.1.1/index.html">RisoTyping</a><br>
     <a href="RisoTyping_Ver.0.1/index.html">RisoTyping</a><br>
 
     <a href="develop\v3">v3</a><br>
