--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script>console.log("welcome");</script>
   </head>
   <body>
-    <div>更新日時： 2023/06/22 17:14</div>
-    <a href="RisoTyping_ver.0.1.1/index.html">RisoTyping</a><br>
+    <div>更新日時： 2023/06/23 8:41</div>
+    <a href="RisoTyping/index.html">RisoTyping</a><br>
 
     <a href="develop\v3">v3</a><br>
     <a href="develop\v4_1">v4-1</a><br>
